@@ -88,7 +88,7 @@ simply not exist.
 package Majordomo;
 
 @ISA = qw(Mj::Access Mj::Token Mj::MailOut Mj::Resend Mj::Inform Mj::BounceHandler);
-$VERSION = "0.1200705280";
+$VERSION = "0.1201101240";
 $unique = 'AAA';
 
 use strict;
@@ -3519,6 +3519,9 @@ sub _list_file_get {
   my $list = $args{list};
   my $file = $args{file};
   my $lang = $args{lang};
+
+  # $file might have bad stuff in it
+  $file =~ s!/?\.\./?!!g;
 
   # Account for list:sublist
   if ($list =~ /^([^:\s]+):/) {
